# VTCBench

./: .editorconfig  .gitignore  README.md  pyproject.toml
config/css/: default.css  locomo.css  locomo_plain.css
config/data/: 250.yml  locomo.json  nolima.json  nolima_pure_text.json  ruler.json  ruler_completion.json
config/model/: dsocr.json  gpt-5.json  internvl_2.5.json
config/render/: 16k.yml  32k.yml  bigpic.yml  debug.yaml  default.yml  glyph.yml  locomo.yml
config/render/r2patcher/: gpt-5-locomo.yml  gpt-5.yml  internvl.yml  qwen3.yml
data/: README.md
docs/: USAGE.md
examples/: calc_compratio.py  collect.py  convert.py  llm_judge.py  run.py  run_dry.py  run_wild.py  text2image_pipeline.py
llm_serving/: README.md
slurm/: benchmark_memory.sbatch  benchmark_reasoning.sbatch  benchmark_retrieval.sbatch  benchmark_wild.sbatch  qwen25vl.sbatch  qwen25vl_locomo.sbatch  qwen25vl_ruler.sbatch
src/locoxim/: args.py  async_evaluate.py  dataio.py  dry_evaluate.py  metric.py
src/locoxim/NoLiMa/: book_haystack.py
src/locoxim/client/: async_api_connector.py  image_helper.py
src/locoxim/dataio/: __init__.py  hashio.py  haystack.py  needle.py  str_transform.py  token_counter.py
src/vtcbench/client/: async_api_connector.py
