[build-system]
requires = ["uv_build>=0.9.6,<0.10.0"]
build-backend = "uv_build"

[project]
name = "LoCoxim"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "google-cloud-aiplatform==1.74.0",
    "google-genai==0.3.0",
    "httpx<0.28",
    "jsonargparse[signatures]>=4.35.0,<4.43.0",
    "langchain-aws==0.2.9",
    "langchain-core==0.3.26",
    "openai",
    "tenacity==9.0.0",
    "tiktoken",
    "transformers==4.46.1",
    "sentencepiece",
    # "deocr[playwright, pymupdf] @ file:///home/meng_wang/DeOCR",
    "deocr[playwright,pymupdf]",
]

[tool.uv.sources]
deocr = { path = "../DeOCR", editable = true }
